Implement full detection logic for all 3 rules (Phases 2-5)
- WeakPasswordHashRule: detect general hash on password vars (DigestUtils/MessageDigest)
  and PBEKeySpec with <600k iterations (OWASP 2025 threshold)
- WeakHashAlgorithmRule: detect MD2/MD4/MD5/SHA-1 via MessageDigest.getInstance,
  DigestUtils, Guava Hashing, and BouncyCastle; context-aware severity
- InsecureRandomRule: flag new Random()/Math.random() in security context,
  and new SecureRandom(seed) always (fixed seed = deterministic output)
- ContextScorer: non-security keywords win over mixed signals to prevent false positives
- Add test sample files with Noncompliant/Compliant annotations
- Add docker-compose.test.yml for isolated SonarQube test environment
- Add test deps: commons-codec, guava, bcprov-jdk18on